cambios:

-problema en que la bandera de Iran y la bandera de Suiza en index no cargaban debidamente