@@ -10,4 +10,8 @@ footer {
         width:40px;
         margin-bottom: 0;
     }
+
+    strong {
+        font-size: 18px;
+    }
 }
