@@ -607,6 +607,8 @@ footer {
   footer img {
     width: 40px;
     margin-bottom: 0; }
+  footer strong {
+    font-size: 18px; }
 
 /*---------------------------------------CSS CONTACTOS---------------------------------------*/
 /*estilo para la seccion contenedora del cuestionario*/
